# flypper

./: LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: main.yml
flypper/: __init__.py  client.py  context.py
flypper/entities/: flag.py
flypper/storage/: abstract.py  in_memory.py
flypper/wsgi/: web_ui.py
flypper/wsgi/templates/: deleted.html  edit_form.html  flags_list.html  index.html  layout.html
tests/: factories.py  fake_storage.py  test_client.py  test_context.py  test_flag.py  test_flypper.py
