[tool.poetry]
name = "flypper"
version = "0.1.1"
description = "Flypper is a lightweight feature flag package that ships with a WSGI interface."
documentation= "https://github.com/nicoolas25/flypper"
repository= "https://github.com/nicoolas25/flypper"
authors = ["Nicolas Zermati <nicoolas25@gmail.com>"]
readme = "README.md"
packages = [
  { include = "flypper" },
  { include = "README.md" },
  { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.7"
Werkzeug = "^2.0.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
